--- a/README
+++ b/README
@@ -9,18 +9,8 @@ so this project aims to provide the launcher starting with these versions.
 Will this project ever be started?
 ==================================
 
-After looking at the official launcher, I just realized that it does implement
-*a lot* of the functionality I provided with EML. Other functionality is now
-hidden within Minecraft itself (window location, properties etc.). With
-the new launcher it now seems easily possible to create a portable launcher and
-Minecraft installation and manage multiple versions, one of the two main goals
-of EML.
+It just did get started, actually. MinecraftMiddleKnife, the library behind this
+launcher, is finished in my opinion. Everything is in place to create this
+launcher and I can actually start Minecraft with it.
 
-The other main goal was to provide an easy way to play offline, this does
-not seem to be provided with the official launcher.
-
-At least the last part might be worth writing again, but there's a lot of
-changed infrastructure around Minecraft right now, which needs to be figured
-out and written.
-
-Don't expect something here soon...sorry...
+So...I'll see to it that it gets done.
